// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderLogo renders 1`] = `
<a
  aria-label="aria-label"
  class="euiHeaderLogo testClass1 testClass2 emotion-euiHeaderLogo-empty-text-euiTestCss"
  data-test-subj="test subject string"
  rel="noreferrer"
>
  <span
    class="euiHeaderLogo__icon"
    data-euiicon-type="logoElastic"
  >
    Elastic
  </span>
</a>
`;

exports[`EuiHeaderLogo renders href 1`] = `
<a
  class="euiHeaderLogo emotion-euiHeaderLogo-empty-text"
  href="#"
  rel="noreferrer"
>
  <span
    class="euiHeaderLogo__icon"
    data-euiicon-type="logoElastic"
  >
    Elastic
  </span>
</a>
`;

exports[`EuiHeaderLogo renders href with rel 1`] = `
<a
  class="euiHeaderLogo emotion-euiHeaderLogo-empty-text"
  href="#"
  rel="noreferrer"
>
  <span
    class="euiHeaderLogo__icon"
    data-euiicon-type="logoElastic"
  >
    Elastic
  </span>
</a>
`;

exports[`EuiHeaderLogo renders optional props 1`] = `
<a
  class="euiHeaderLogo emotion-euiHeaderLogo-empty-text"
  rel="noreferrer"
  style="color: red;"
>
  <span
    class="euiHeaderLogo__icon"
    data-euiicon-type="error"
  >
    Moby Dick
  </span>
</a>
`;

exports[`EuiHeaderLogo renders text 1`] = `
<a
  class="euiHeaderLogo emotion-euiHeaderLogo-empty-text"
  rel="noreferrer"
>
  <span
    class="euiHeaderLogo__icon"
    data-euiicon-type="logoElastic"
  >
    Elastic
  </span>
  <span
    class="euiHeaderLogo__text emotion-euiHeaderLogo__text"
  >
    Elastic
  </span>
</a>
`;
